# baltimore-vacants

./: .python-version  CNAME  README.md  bmore-vacants.py  combine_data.py  main.py  pyproject.toml
.github/workflows/: deploy.yaml
raw-data/: vacant_building_notices.csv
