[project]
name = "baltimore-vacants"
version = "0.1.0"
description = "exploration of who owns vacant homes in Baltimore city"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "marimo[recommended,sql]>=0.14.6",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "polars>=1.31.0",
]
